[gd_scene load_steps=7 format=2]

[ext_resource path="res://components/shared/cron_helper.gd" type="Script" id=1]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/icons/icon_128_check.svg" type="Texture" id=3]
[ext_resource path="res://components/elements/styled/flat_copy_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/icons/icon_128_question_circle.svg" type="Texture" id=5]
[ext_resource path="res://assets/icons/icon_128_close_thick.svg" type="Texture" id=6]

[node name="CronHelper" type="PanelContainer"]
margin_right = 296.0
margin_bottom = 104.0
theme_type_variation = "PanelContainerWindow"
script = ExtResource( 1 )

[node name="Content" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 4.0
margin_right = 706.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Content"]
margin_right = 696.0
margin_bottom = 33.0

[node name="IconButton" parent="Content/HBoxContainer" instance=ExtResource( 2 )]
flat = true
icon_tex = ExtResource( 5 )

[node name="HelpLabel" type="Label" parent="Content/HBoxContainer"]
margin_left = 37.0
margin_top = 6.0
margin_right = 585.0
margin_bottom = 26.0
size_flags_horizontal = 3
theme_type_variation = "LabelBold"
text = "Cron expression helper"

[node name="AllDataCopyButton" parent="Content/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 589.0
margin_top = 0.0
margin_right = 622.0
margin_bottom = 33.0
rect_min_size = Vector2( 33, 33 )

[node name="AcceptButton" parent="Content/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 626.0
margin_right = 659.0
icon_tex = ExtResource( 3 )

[node name="CloseButton" parent="Content/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 663.0
margin_right = 696.0
icon_tex = ExtResource( 6 )

[node name="Control2" type="Control" parent="Content"]
margin_top = 43.0
margin_right = 696.0
margin_bottom = 43.0

[node name="Control" type="GridContainer" parent="Content"]
margin_top = 53.0
margin_right = 696.0
margin_bottom = 114.0
custom_constants/vseparation = -1
custom_constants/hseparation = 9
columns = 5

[node name="MinLineEdit" type="LineEdit" parent="Content/Control"]
unique_name_in_owner = true
margin_right = 132.0
margin_bottom = 33.0
theme_type_variation = "LineEditCode"
text = "*"
align = 1

[node name="HourLineEdit" type="LineEdit" parent="Content/Control"]
unique_name_in_owner = true
margin_left = 141.0
margin_right = 273.0
margin_bottom = 33.0
theme_type_variation = "LineEditCode"
text = "*"
align = 1

[node name="DayMLineEdit" type="LineEdit" parent="Content/Control"]
unique_name_in_owner = true
margin_left = 282.0
margin_right = 414.0
margin_bottom = 33.0
theme_type_variation = "LineEditCode"
text = "*"
align = 1

[node name="MonthLineEdit" type="LineEdit" parent="Content/Control"]
unique_name_in_owner = true
margin_left = 423.0
margin_right = 555.0
margin_bottom = 33.0
theme_type_variation = "LineEditCode"
text = "*"
align = 1

[node name="DayWLineEdit" type="LineEdit" parent="Content/Control"]
unique_name_in_owner = true
margin_left = 564.0
margin_right = 696.0
margin_bottom = 33.0
theme_type_variation = "LineEditCode"
text = "*"
align = 1

[node name="MinLabel" type="Label" parent="Content/Control"]
margin_top = 32.0
margin_right = 132.0
margin_bottom = 61.0
size_flags_vertical = 5
theme_type_variation = "LabelSmall"
text = "min"
align = 1

[node name="HourLabel" type="Label" parent="Content/Control"]
margin_left = 141.0
margin_top = 32.0
margin_right = 273.0
margin_bottom = 61.0
size_flags_vertical = 5
theme_type_variation = "LabelSmall"
text = "hour"
align = 1

[node name="DayMLabel" type="Label" parent="Content/Control"]
margin_left = 282.0
margin_top = 32.0
margin_right = 414.0
margin_bottom = 61.0
size_flags_vertical = 5
theme_type_variation = "LabelSmall"
custom_constants/line_spacing = -1
text = "day
(month)"
align = 1

[node name="MonthLabel" type="Label" parent="Content/Control"]
margin_left = 423.0
margin_top = 32.0
margin_right = 555.0
margin_bottom = 61.0
size_flags_vertical = 5
theme_type_variation = "LabelSmall"
custom_constants/line_spacing = -1
text = "month"
align = 1

[node name="DayWLabel" type="Label" parent="Content/Control"]
margin_left = 564.0
margin_top = 32.0
margin_right = 696.0
margin_bottom = 61.0
size_flags_vertical = 5
theme_type_variation = "LabelSmall"
custom_constants/line_spacing = -1
text = "day
(week)"
align = 1

[node name="Help" type="VBoxContainer" parent="Content"]
margin_top = 124.0
margin_right = 696.0
margin_bottom = 132.0

[node name="HSeparator" type="HSeparator" parent="Content/Help"]
margin_right = 696.0
margin_bottom = 4.0

[node name="HelpGrid" type="GridContainer" parent="Content/Help"]
unique_name_in_owner = true
margin_top = 8.0
margin_right = 696.0
margin_bottom = 8.0
custom_constants/vseparation = 4
custom_constants/hseparation = 20
columns = 2

[connection signal="mouse_entered" from="Content/HBoxContainer/IconButton" to="." method="_on_IconButton_mouse_entered"]
[connection signal="mouse_exited" from="Content/HBoxContainer/IconButton" to="." method="_on_IconButton_mouse_exited"]
[connection signal="pressed" from="Content/HBoxContainer/IconButton" to="." method="_on_IconButton_pressed"]
[connection signal="pressed" from="Content/HBoxContainer/AllDataCopyButton" to="." method="_on_AllDataCopyButton_pressed"]
[connection signal="pressed" from="Content/HBoxContainer/AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="Content/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
